# geospatial-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/clients/: __init__.py  osm.py
src/tools/: __init__.py  geo.py
